@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2006 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -19,10 +19,6 @@ import org.eclipse.swt.widgets.Button;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Control;
 
-/**
- * @version 	1.0
- * @author
- */
 public abstract class SharedPartWithButtons extends SharedPart {
 	private String[] buttonLabels;
 	private Control[] controls;
@@ -58,9 +54,6 @@ public abstract class SharedPartWithButtons extends SharedPart {
 	protected abstract void createMainControl(Composite parent, int style, int span);
 	protected abstract void buttonSelected(Button button, int index);
 
-	/*
-	 * @see SharedPart#createControl(Composite, FormWidgetFactory)
-	 */
 	@Override
 	public void createControl(Composite parent, int style, int span) {
 		createMainLabel(parent, span);
@@ -97,7 +90,7 @@ public abstract class SharedPartWithButtons extends SharedPart {
 		button.setText(label);
 		GridData gd = new GridData(GridData.FILL_HORIZONTAL | GridData.VERTICAL_ALIGN_BEGINNING);
 		button.setLayoutData(gd);
-		button.setData(new Integer(index));
+		button.setData(Integer.valueOf(index));
 		return button;
 	}
 
