@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013 QNX Software Systems and others.
+ * Copyright (c) 2013, 2016 QNX Software Systems and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -26,13 +26,12 @@ import org.eclipse.cdt.core.dom.ast.cpp.ICPPASTFieldReference;
 import org.eclipse.cdt.core.dom.ast.cpp.ICPPClassType;
 import org.eclipse.cdt.internal.qt.core.ASTUtil;
 import org.eclipse.cdt.internal.qt.core.QtFunctionCallUtil;
+import org.eclipse.cdt.internal.qt.core.QtKeywords;
+import org.eclipse.cdt.internal.qt.core.index.IQMethod;
+import org.eclipse.cdt.internal.qt.core.index.IQObject;
+import org.eclipse.cdt.internal.qt.core.index.QtIndex;
 import org.eclipse.cdt.internal.ui.text.contentassist.CCompletionProposal;
 import org.eclipse.cdt.internal.ui.text.contentassist.RelevanceConstants;
-import org.eclipse.cdt.qt.core.QtKeywords;
-import org.eclipse.cdt.qt.core.index.IQMethod;
-import org.eclipse.cdt.qt.core.index.IQObject;
-import org.eclipse.cdt.qt.core.index.QtIndex;
-import org.eclipse.cdt.qt.ui.QtUIPlugin;
 import org.eclipse.cdt.ui.text.contentassist.ICEditorContentAssistInvocationContext;
 import org.eclipse.jface.text.BadLocationException;
 import org.eclipse.jface.text.contentassist.ICompletionProposal;
@@ -99,7 +98,7 @@ public class QObjectConnectCompletion {
 			int repLength = replacement.length();
 			int repOffset = context.getInvocationOffset();
 			CCompletionProposal p
-				= new CCompletionProposal(replacement, repOffset, repLength, QtUIPlugin.getQtLogo(), display, relevance, context.getViewer());
+				= new CCompletionProposal(replacement, repOffset, repLength, Activator.getQtLogo(), display, relevance, context.getViewer());
 			p.setCursorPosition(repLength + cursorOffset);
 			return p;
 		}
@@ -155,12 +154,12 @@ public class QObjectConnectCompletion {
 		final int length = code.length();
 		int pos = 0;
 		List<Integer> positions = new ArrayList<Integer>();
-		positions.add(new Integer(-1));
+		positions.add(-1);
 		while (pos < length && pos != -1) {
 			char ch = code.charAt(pos);
 			switch (ch) {
 			case ',':
-				positions.add(new Integer(pos));
+				positions.add(Integer.valueOf(pos));
 				break;
 			case '(':
 				pos = indexOfClosingPeer(code, '(', ')', pos);
@@ -177,7 +176,7 @@ public class QObjectConnectCompletion {
 			if (pos != -1)
 				pos++;
 		}
-		positions.add(new Integer(length));
+		positions.add(Integer.valueOf(length));
 
 		int[] fields = new int[positions.size()];
 		for (int i = 0; i < fields.length; i++)
